--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container mt-5 border border-1 p-0 main-container">
     <div class="card text-start">
 
-      <div class="card-header">
+      <div class="card-header" style="font-size: 40px;">
         Payment form example
       </div>
       <div class="container">
@@ -65,27 +65,27 @@
                 <div class="form-check form-check-inline">
                   <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"
                     value="option1" />
-                  <label class="form-check-label" for="inlineRadio1"><i class="fa-brands fa-cc-mastercard"></i></label>
+                  <label class="form-check-label" for="inlineRadio1"><i class="fa-brands fa-cc-mastercard text-white"></i></label>
                 </div>
                 <div class="form-check form-check-inline">
                   <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
                     value="option2" />
-                  <label class="form-check-label" for="inlineRadio2"><i class="fa-brands fa-cc-visa"></i></label>
+                  <label class="form-check-label" for="inlineRadio2"><i class="fa-brands fa-cc-visa text-white"></i></label>
                 </div>
                 <div class="form-check form-check-inline">
                   <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3"
                     value="option3" />
-                  <label class="form-check-label" for="inlineRadio3"><i class="fa-brands fa-cc-visa"></i></label>
+                  <label class="form-check-label" for="inlineRadio3"><i class="fa-brands fa-cc-visa text-white"></i></label>
                 </div>
                 <div class="form-check form-check-inline">
                   <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4"
                     value="option4" />
-                  <label class="form-check-label" for="inlineRadio4"><i class="fa-brands fa-cc-visa"></i></label>
+                  <label class="form-check-label" for="inlineRadio4"><i class="fa-brands fa-cc-visa text-white"></i></label>
                 </div>
               </div>
             </div>
-            <div class="col-3"></div>
-            <div class="col-4 d-flex justify-content-center flex-grow-1 ps- pe-0">
+            <div class="col-lg-3"></div>
+            <div class="col-lg-3 d-flex justify-content-center flex-grow-1 ps- pe-2">
               <div class="mb-3 flex-grow-1">
                 <label for="exampleFormControlTextarea1" class="form-label">Message</label>
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
@@ -104,8 +104,8 @@
     <div class="row">
 
       <div class="card-footer text-body-secondary d-flex justify-content-end py-2 pe-4">
+        <button type="button" class="btn btn-secondary me-1">Cancel</button>
         <button type="button" class="btn btn-primary me-1 ">Send</button>
-        <button type="button" class="btn btn-secondary">Cancel</button>
       </div>
     </div>
   </div>
