--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
 <body>
   <div class="container mt-5 border border-1 p-0 main-container">
     <div class="card text-start">
-
       <div class="card-header" style="font-size: 40px;">
         Payment form example
       </div>
       <div class="container">
         <div class="alert alert-danger mt-2" role="alert">
           Some fields are missing
-        </div>
+        </div> 
         <div class="justify-content-center align-content-center mt-4">
-          <form class="row g-3 ">
+          <form class="row g-3">
             <div class="col-sm-4">
               <label for="inputCardNumber" class="form-label">Card #</label>
               <input type="text" class="form-control" id="inputCardNumber" placeholder="XXXXXXXXXXXXXXX" />
@@ -44,10 +43,12 @@
               <label for="inputLastName" class="form-label">Last Name</label>
               <input type="text" class="form-control" id="inputLastName" />
             </div>
+
             <div class="col-md-6">
               <label for="inputCity" class="form-label">City</label>
               <input type="text" class="form-control" id="inputCity" />
             </div>
+
             <div class="col-md-3">
               <label for="inputState" class="form-label">State</label>
               <select id="inputState" class="form-select">
@@ -55,12 +56,12 @@
                 <option>...</option>
               </select>
             </div>
+
             <div class="col-md-3">
               <label for="inputZip" class="form-label">Postal Code</label>
               <input type="text" class="form-control" id="inputZip" />
             </div>
-
-            <div class="col-4 bg-secondary ms-3 card-borders" style="max-width: 250px; max-height: 27px">
+            <div class="col-4 bg-secondary ms-3 card-borders flex-grow-1" style="max-width: 250px; max-height: 27px">
               <div class="d-flex flex-row align-items-center justify-content-center">
                 <div class="form-check form-check-inline">
                   <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"
@@ -84,9 +85,8 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-3"></div>
-            <div class="col-lg-3 d-flex justify-content-center flex-grow-1 ps- pe-2">
-              <div class="mb-3 flex-grow-1">
+            <div class="col-lg-6 col-md-0 d-flex justify-content-end">
+              <div class="mb-3 flex-grow-1 ms-5">
                 <label for="exampleFormControlTextarea1" class="form-label">Message</label>
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
 
@@ -97,27 +97,29 @@
                 </div>
               </div>
             </div>
+
+            <div class="col-lg-3 col-md-0"></div>
+
+     
+
+          </form>
         </div>
       </div>
     </div>
 
     <div class="row">
-
       <div class="card-footer text-body-secondary d-flex justify-content-end py-2 pe-4">
         <button type="button" class="btn btn-secondary me-1">Cancel</button>
-        <button type="button" class="btn btn-primary me-1 ">Send</button>
+        <button type="button" class="btn btn-primary me-1 " id="sendButton">Send</button>
       </div>
     </div>
   </div>
-  </form>
-  </div>
-
-  </div>
-
+  
   <script src="https://kit.fontawesome.com/32f3590cd8.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
+    <script src= "app.js"></script>
 </body>
 
 </html>
